--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "clean": "rimraf build/dist build/server build/analyzers",
     "clean:dlls": "rimraf build/dlls  webpack/dlls",
     "prettier": "prettier-eslint --write --eslint-config-path .eslintrc './+(bin)/**/*.js'",
-    "lint": "eslint -c .eslintrc bin && flow",
+    "lint": "eslint -c .eslintrc bin",
     "test": "NODE_PATH=client jest client"
   },
   "dependencies": {
@@ -80,14 +80,13 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "popper.js": "^1.15.0",
-    "pretty-error": "^2.1.1",
     "prop-types": "^15.7.2",
     "qs": "^6.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-final-form": "^6.0.1",
     "react-helmet": "^5.2.1",
-    "react-redux": "^7.0.3",
+    "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
@@ -129,13 +128,12 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/plugin-transform-spread": "^7.2.2",
     "@babel/preset-env": "^7.4.5",
-    "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.4.5",
     "autoprefixer": "^9.6.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.2",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-universal-import": "^4.0.0",
@@ -145,24 +143,21 @@
     "css-loader": "^3.0.0",
     "cssnano": "^4.1.10",
     "enzyme": "^3.9.0",
-    "eslint": "^5.14.1",
+    "eslint": "^6.0.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-loader": "^2.1.2",
-    "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.14.1",
     "expose-loader": "^0.7.5",
     "extract-css-chunks-webpack-plugin": "^4.5.2",
     "file-loader": "^4.0.0",
-    "flow-bin": "^0.97.0",
-    "flow-typed": "^2.5.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^2.4.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
-    "lint-staged": "^8.2.0",
+    "lint-staged": "^8.2.1",
     "morgan": "^1.9.1",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
@@ -177,7 +172,7 @@
     "postcss-preset-env": "^6.6.0",
     "postcss-reporter": "^6.0.1",
     "postcss-url": "^8.0.0",
-    "prettier-eslint-cli": "^4.7.1",
+    "prettier-eslint-cli": "^5.0.0",
     "react-a11y": "^1.1.0",
     "react-devtools": "^3.6.1",
     "react-hot-loader": "^4.11.1",
