--- a/package.json
+++ b/package.json
@@ -68,7 +68,6 @@
     "jwt-simple": "^0.5.6",
     "locale": "^0.1.0",
     "localforage": "^1.7.3",
-    "lodash.debounce": "^4.0.8",
     "lodash.omit": "^4.5.0",
     "lru-memoize": "^1.1.0",
     "moment": "^2.24.0",
@@ -155,6 +154,7 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^2.5.0",
     "identity-obj-proxy": "^3.0.0",
+    "inspectpack": "^4.2.1",
     "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
     "lint-staged": "^8.2.1",
