--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "prod": "concurrently \"yarn prod:bin:server\" \"yarn prod:bin:api\"",
     "prod:bin:server": "NODE_PATH=src NODE_ENV=production PORT=8080 APIPORT=3030 WEBPACK_DLLS=0 node --trace-deprecation ./bin/server.js",
     "prod:bin:api": "NODE_PATH=api NODE_ENV=production APIPORT=3030 BABEL_DISABLE_CACHE=1 node ./bin/api.js",
+    "prod:build:client": "NODE_ENV=production webpack --display-error-details --config ./webpack/prod.client.js",
     "dlls": "webpack --display-error-details --config webpack/dllplugin.vendor.config.js",
     "clean:all": "npm-run-all --parallel clean clean:dlls",
     "clean": "rimraf build/dist build/server build/analyzers",
     "clean:dlls": "rimraf build/dlls  webpack/dlls",
     "prettier": "prettier-eslint --write --eslint-config-path .eslintrc './+(bin)/**/*.js'",
     "lint": "eslint -c .eslintrc bin",
-    "test": "NODE_PATH=client jest client",
-    "prod:build:client": "NODE_ENV=production webpack --display-error-details --config ./webpack/prod.client.js"
+    "test": "NODE_PATH=client jest client"
   },
   "dependencies": {
     "@babel/register": "^7.4.4",
+    "@babel/runtime-corejs3": "^7.5.4",
     "@feathersjs/authentication": "^2.1.16",
     "@feathersjs/authentication-client": "^1.0.11",
     "@feathersjs/authentication-jwt": "^2.0.10",
@@ -106,16 +107,16 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
-    "@babel/core": "^7.5.0",
+    "@babel/core": "^7.5.4",
     "@babel/plugin-proposal-class-properties": "^7.5.0",
     "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-proposal-do-expressions": "^7.5.0",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-proposal-export-default-from": "^7.5.2",
+    "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
     "@babel/plugin-proposal-function-sent": "^7.5.0",
     "@babel/plugin-proposal-json-strings": "^7.2.0",
     "@babel/plugin-proposal-numeric-separator": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.4",
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.2.0",
@@ -125,10 +126,8 @@
     "@babel/plugin-transform-regenerator": "^7.4.5",
     "@babel/plugin-transform-runtime": "^7.5.0",
     "@babel/plugin-transform-spread": "^7.2.2",
-    "@babel/preset-env": "^7.5.0",
+    "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.5.1",
-    "@babel/runtime-corejs3": "^7.5.1",
     "autoprefixer": "^9.6.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^7.0.0-bridge.0",
@@ -169,13 +168,13 @@
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.6.0",
+    "postcss-preset-env": "^6.7.0",
     "postcss-reporter": "^6.0.1",
     "postcss-url": "^8.0.0",
     "prettier-eslint-cli": "^5.0.0",
     "react-a11y": "^1.1.0",
     "react-devtools": "^3.6.1",
-    "react-hot-loader": "^4.12.3",
+    "react-hot-loader": "^4.12.5",
     "redux-devtools": "^3.5.0",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-extension": "^2.13.8",
@@ -190,7 +189,7 @@
     "terser-webpack-plugin": "^1.3.0",
     "typescript": "^3.5.2",
     "url-loader": "^2.0.1",
-    "webpack": "^4.35.2",
+    "webpack": "^4.35.3",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.5",
     "webpack-dev-middleware": "^3.7.0",
