--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,10 +1,14 @@
-# browsers support
 # last 2 years
-
 # last 1 version
 # > 1%
 # IE 10
 
+[production staging]
+> 0.1%
+not dead
+not op_mini all
+
+[development]
 last 1 chrome version
 last 1 firefox version
 last 1 safari version
