--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clean:dlls": "rimraf build/dlls  webpack/dlls",
     "prettier": "prettier-eslint --write --eslint-config-path .eslintrc './+(bin)/**/*.js'",
     "lint": "eslint -c .eslintrc bin",
-    "test": "NODE_PATH=client jest client"
+    "test": "NODE_PATH=src jest src"
   },
   "dependencies": {
     "@babel/register": "^7.4.4",
@@ -39,7 +39,6 @@
     "@feathersjs/socketio": "^3.2.9",
     "@feathersjs/socketio-client": "^1.2.1",
     "@fortawesome/fontawesome-free": "^5.9.0",
-    "async": "^3.1.0",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
@@ -56,8 +55,8 @@
     "express-session": "^1.16.2",
     "feathers-authentication-hooks": "^0.3.1",
     "feathers-hooks-common": "^4.20.7",
-    "feathers-nedb": "^4.0.1",
-    "final-form": "^4.16.1",
+    "feathers-nedb": "^5.0.1",
+    "final-form": "^4.18.2",
     "helmet": "^3.18.0",
     "history": "^4.9.0",
     "http-proxy": "^1.17.0",
@@ -96,7 +95,6 @@
     "redux-api-middleware": "^3.0.1",
     "redux-auth-wrapper": "^2.1.0",
     "redux-immutable": "^4.0.0",
-    "redux-notify": "^0.2.0",
     "redux-persist": "^5.10.0",
     "redux-persist-cookie-storage": "^1.0.0",
     "regenerator-runtime": "^0.13.2",
@@ -128,7 +126,7 @@
     "@babel/plugin-transform-spread": "^7.2.2",
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.6.0",
+    "autoprefixer": "^9.6.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.2",
@@ -148,7 +146,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
     "expose-loader": "^0.7.5",
-    "extract-css-chunks-webpack-plugin": "^4.5.5",
+    "extract-css-chunks-webpack-plugin": "^4.5.6",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^3.0.0",
@@ -174,7 +172,7 @@
     "prettier-eslint-cli": "^5.0.0",
     "react-a11y": "^1.1.0",
     "react-devtools": "^3.6.1",
-    "react-hot-loader": "^4.12.6",
+    "react-hot-loader": "^4.12.7",
     "redux-devtools": "^3.5.0",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-extension": "^2.13.8",
