--- a/package.json
+++ b/package.json
@@ -187,14 +187,13 @@
     "terser-webpack-plugin": "^1.3.0",
     "typescript": "^3.5.3",
     "url-loader": "^2.0.1",
-    "webpack": "^4.35.3",
+    "webpack": "^4.36.0",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.6",
     "webpack-dev-middleware": "^3.7.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-hot-server-middleware": "^0.6.0",
-    "workbox-webpack-plugin": "^4.3.1",
-    "write-file-webpack-plugin": "^4.5.0"
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "husky": {
     "hooks": {
