refactor (prod.client): Added packages webpackbar and webpack-assets-manifest just testing.

--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
   "author": "dev",
   "license": "MIT",
   "scripts": {
-    "dev": "concurrently --kill-others \"yarn start:dev:server\" \"yarn start:dev:api\" \"react-devtools\"",
+    "dev": "DO_BUILD=1 concurrently --kill-others \"yarn start:dev:server\" \"yarn start:dev:api\" \"react-devtools\"",
     "start:dev:server": "NODE_ENV=development NODE_PATH=src PORT=3000 APIPORT=3030 WEBPACK_DLLS=1 node ./bin/server.js --no-update-notifier",
     "start:dev:api": "NODE_ENV=development NODE_PATH=api APIPORT=3030 BABEL_DISABLE_CACHE=1 node ./bin/api.js",
     "react-devtools": "react-devtools",
     "prod": "concurrently \"yarn prod:bin:server\" \"yarn prod:bin:api\"",
     "prod:bin:server": "NODE_PATH=src NODE_ENV=production PORT=8080 APIPORT=3030 WEBPACK_DLLS=0 node --trace-deprecation ./bin/server.js",
     "prod:bin:api": "NODE_PATH=api NODE_ENV=production APIPORT=3030 BABEL_DISABLE_CACHE=1 node ./bin/api.js",
-    "prod:build:client": "NODE_ENV=production webpack --display-error-details --config ./webpack/prod.client.js",
     "dlls": "webpack --display-error-details --config webpack/dllplugin.vendor.config.js",
     "clean:all": "npm-run-all --parallel clean clean:dlls",
     "clean": "rimraf build/dist build/server ./analyzers",
@@ -188,11 +187,13 @@
     "typescript": "^3.5.3",
     "url-loader": "^2.1.0",
     "webpack": "^4.37.0",
+    "webpack-assets-manifest": "^3.1.1",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.6",
     "webpack-dev-middleware": "^3.7.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-hot-server-middleware": "^0.6.0",
+    "webpackbar": "^3.2.0",
     "workbox-webpack-plugin": "^4.3.1"
   },
   "husky": {
